Remove vertical align for correct alignment

--- a/app/assets/stylesheets/content/work_package_details/_activities_tab.sass
+++ b/app/assets/stylesheets/content/work_package_details/_activities_tab.sass
@@ -39,7 +39,6 @@
       // important for IE
       display: inline-block
       max-width: 100%
-      vertical-align: top
   p
     word-wrap: break-word
 
